attempting to fix problem where spotify playlist is not displaying full height on mobile

--- a/app/style.css
+++ b/app/style.css
@@ -13,8 +13,10 @@
     position: absolute; 
     top: 0; 
     left: 0; 
-    width: 100%; 
-    height: 100%;
+    width:  100px;
+    min-width:  100%;
+    height: 100px;
+    min-height: 100%;
   }
 }
 
@@ -45,10 +47,6 @@ body {
   /* Set the fixed height of the footer here */
   height: 50px;
   line-height: 50px; /* Vertically center the text there */
-}
-
-.row {
-  padding-top: 20px;
 }
 
 h1 {
